diesel_compile_tests/tests/compile-fail/queryable_by_name_requires_table_name_or_sql_type_annotation.rs
#[macro_use] extern crate diesel;

#[derive(QueryableByName)]
//~^ ERROR Your struct must either be annotated with `#[table_name = "foo"]` or have all of its fields annotated with `#[sql_type = "Integer"]`
struct Foo {
    a: i32,
}

fn main() {}
